--- a/luontokuvat/kesa/_posts/2015-07-14-00098.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00098.md
@@ -2,30 +2,20 @@
 layout: page
 image:
   feature:
-  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACf4CgBejx2o3LrCSLbC2Wya/luontokuvat/kes%C3%A4/6/DS26261-245px.jpg
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAZuq20LuOqyJXVksfXShava/luontokuvat/kes%C3%A4/9/DS35221-245px.jpg
   thumb:
 ---
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC9-83p9B-smeDscUMx9LVEa/luontokuvat/kes%C3%A4/6/DS25753-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAADj-8fTVaQyI9gU1ZhMql_a/luontokuvat/kes%C3%A4/6/DS25753.jpg)
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/clovers) sivustolta.*
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADpD1yxWDpXZsM2xqTBS1B6a/luontokuvat/kes%C3%A4/6/DS25754-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADd-89y9RckRzmU4YLxpUBta/luontokuvat/kes%C3%A4/6/DS25754.jpg)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABA_ISfPvhDSsbjGAXl2TY-a/luontokuvat/kes%C3%A4/9/DS35218-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAMTmlKcpkxUJ3GnYpg-HEEa/luontokuvat/kes%C3%A4/9/DS35218.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC5pqCv3kOpuZOPqjfjatYWa/luontokuvat/kes%C3%A4/6/DS25849-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA4x06OCQJfDuSjebHDqoAia/luontokuvat/kes%C3%A4/6/DS25849.jpg)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABUJp5-XQG8d6Ko8LEpuviNa/luontokuvat/kes%C3%A4/9/DS35232-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAxCXsOeg_txQ9OhI42AtfYa/luontokuvat/kes%C3%A4/9/DS35232.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD4ISD2ZOFUi5UeFuyzZYU5a/luontokuvat/kes%C3%A4/6/DS25836-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAAvP7P1BImEwCplSZWPToja/luontokuvat/kes%C3%A4/6/DS25836.jpg)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADppnAaBZwlc2AJfGphkfWDa/luontokuvat/kes%C3%A4/9/DS35224-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADkcIzYBjEFfYueVs2-Ju6-a/luontokuvat/kes%C3%A4/9/DS35224.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABx0F-TaV9h9B0NaQr2ddXma/luontokuvat/kes%C3%A4/6/DS25825-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADdgUjYC-75QFkeQzFtDMQQa/luontokuvat/kes%C3%A4/6/DS25825.jpg)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABXAtuFY3ukqiiV003Ekh2Wa/luontokuvat/kes%C3%A4/9/DS35246-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADdyMs7CiuB3C8-nKILV8Ara/luontokuvat/kes%C3%A4/9/DS35246.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAcI13auAUepQLnFo8t9mtKa/luontokuvat/kes%C3%A4/6/DS25812-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADTYVr0DVVOqe9C18BnWHRga/luontokuvat/kes%C3%A4/6/DS25812.jpg)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAACy7K_DZBECjVievhSy4wRa/luontokuvat/kes%C3%A4/9/DS35221-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABYNkLCMgSy_75nRTtOTYQsa/luontokuvat/kes%C3%A4/9/DS35221.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABKNhXtpbp_NV5vipOWrVn_a/luontokuvat/kes%C3%A4/6/DS25765-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADeZ2Ic1sqgmwd36nWF8pvha/luontokuvat/kes%C3%A4/6/DS25765.jpg)
-
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAnM7u9sm_dLh-B549jZhjja/luontokuvat/kes%C3%A4/6/DS26261-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACdvdBV4vBRnPvo7T80szHTa/luontokuvat/kes%C3%A4/6/DS26261.jpg)
-
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAm4kvyNOWS8h7hqXnMymMWa/luontokuvat/kes%C3%A4/6/DS26239-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABmjUDwkRxrR0CmSLFtY71wa/luontokuvat/kes%C3%A4/6/DS26239.jpg)
-
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAATA4MILsTeWt1Xls5R9LUea/luontokuvat/kes%C3%A4/6/DS26275-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACp7LjQvueWJi8EMWqEpoGXa/luontokuvat/kes%C3%A4/6/DS26275.jpg)
-
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACQC4tvjowM1QIBXCiVvWcQa/luontokuvat/kes%C3%A4/6/DS26283-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACvNGqdv5_1m0u9Y_brRy5pa/luontokuvat/kes%C3%A4/6/DS26283.jpg)
-
-*Ahdekaunokki*
+*Apila*
