--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00027.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00027.md
@@ -11,3 +11,5 @@ image:
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAVBQobIdOrqK3WWb-dyQ9fa/luontokuvat/kes%C3%A4/9/DS35129-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABZdJ5X-FswXhWhKDkeiMlga/luontokuvat/kes%C3%A4/9/DS35129.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAADc1Eb2XA25uY6HgjHY3tta/luontokuvat/kes%C3%A4/9/DS35130-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD0qg75nYWJuB0zSmrCqbVea/luontokuvat/kes%C3%A4/9/DS35130.jpg)
+
+*Thale Cress*
