--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00118.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00118.md
@@ -35,3 +35,5 @@ image:
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAvAi_c5RTUw84fo9ctF7_Ua/luontokuvat/kes%C3%A4/9/DS44997-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB-tfhCfTP-NUcBAu0pdmLAa/luontokuvat/kes%C3%A4/9/DS44997.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAdr7dVkU8NKe0O1DHRmP9oa/luontokuvat/kes%C3%A4/9/DS44998-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACvmai2d29Y5hFuaCCde83Ka/luontokuvat/kes%C3%A4/9/DS44998.jpg)
+
+*Thale Cress*
