--- a/luontokuvat/kesa/_posts/2015-07-14-00083.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00083.md
@@ -12,6 +12,4 @@ image:
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB6lSILAcex0YVjhCg3IXzya/luontokuvat/kes%C3%A4/4/DS22279-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADFalUqyDylpw7KpdJGjmKXa/luontokuvat/kes%C3%A4/4/DS22279.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACU7BiZ5omI11RqKU3mxwFia/luontokuvat/kes%C3%A4/4/DS22369-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC0Ea9jtdbecT0HUjvyzOIna/luontokuvat/kes%C3%A4/4/DS22369.jpg)
-
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACeZB_cPf_W4OXLn1Pb6Dgpa/luontokuvat/kes%C3%A4/4/DS22375-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA72p4CoLDjXi9JSA3KoWisa/luontokuvat/kes%C3%A4/4/DS22375.jpg)
+*Lituruoho*
