--- a/luontokuvat/talvi/_posts/2015-07-14-00053.md
+++ b/luontokuvat/talvi/_posts/2015-07-14-00053.md
@@ -6,8 +6,6 @@ image:
   thumb:
 ---
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD-Rxf6JJ5P3tmgrpThGCEGa/luontokuvat/talvi/3/DS43772_-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAkoXRIhFw1n74kZonBXmO4a/luontokuvat/talvi/3/DS43772_.jpg)
-
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACSaYpOsSNWFRHg9kt8PZtGa/luontokuvat/talvi/4/DS43772_2-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAGsaT5HhxgCmB2WD0WBivra/luontokuvat/talvi/4/DS43772_2.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABSUnd1lNKfvLf6TCfJi-J9a/luontokuvat/talvi/4/DS43772_3-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAiIyujfRTAI3DTIlBDoOMya/luontokuvat/talvi/4/DS43772_3.jpg)
@@ -26,7 +24,38 @@ image:
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADH5b2TYO6GQRhnxi_2hevfa/luontokuvat/talvi/4/DS43772_4-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADe-uimYvvAlJEbfpvkW3kwa/luontokuvat/talvi/4/DS43772_4.jpg)
 
-*Lähikuvia jäästä*
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABVJxKl230JflxMV2Lyt3Zqa/luontokuvat/talvi/4/DS43712_1-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADMiHN20RMO0kvyjrhpbJ6na/luontokuvat/talvi/4/DS43712_1.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC5yxcyfmIJKh8ROqnzMGyNa/luontokuvat/talvi/4/DS43724_2-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB7jhc6kpnEXS2iRC24L_Zma/luontokuvat/talvi/4/DS43724_2.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADjwRtxC_iFK8szbJktn6Fpa/luontokuvat/talvi/4/DS43712_3-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC_UT8EQn-zl_N-f6LSpdWpa/luontokuvat/talvi/4/DS43712_3.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC9Yp8ZQr07g7SoQdqyCMSMa/luontokuvat/talvi/4/DS43724_1-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACS-Hgtae5BFhYlF96qHUP5a/luontokuvat/talvi/4/DS43724_1.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD8ALb1ulr7KMZQtbKOoCwia/luontokuvat/talvi/4/DS43724_3-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADR9S51sIOX3TztLKS1bCzSa/luontokuvat/talvi/4/DS43724_3.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABIbESJWWwiD7Pfqm8MA-bMa/luontokuvat/talvi/4/DS43724_4-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABGiwoXxjp5dGgM6U1LvhAva/luontokuvat/talvi/4/DS43724_4.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABZw2PimJfdWFE8y3TdyPUTa/luontokuvat/talvi/4/DS43771_1-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADskG-weLtKfBNoXvN-no5za/luontokuvat/talvi/4/DS43771_1.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD9kluyL8d1H-NTS1bH37XLa/luontokuvat/talvi/4/DS43712_2-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACst6TvepVQuYRTRdZeSMrCa/luontokuvat/talvi/4/DS43712_2.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAuhdfSQVlEdp6JQRfHXa9sa/luontokuvat/talvi/4/DS43771_2-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC1Ke8N_OKREF7cg2esqcbNa/luontokuvat/talvi/4/DS43771_2.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADtvutyL8Nyy_FWDYdIqjFUa/luontokuvat/talvi/4/DS43771_3-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABfaGNJ5GhiQzbRbaP-6S67a/luontokuvat/talvi/4/DS43771_3.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACrk-Cn3O0pvEBoFxx7fyiwa/luontokuvat/talvi/4/DS43771_8-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD5h4bGOFAuCXJEOYhq2_2Ia/luontokuvat/talvi/4/DS43771_8.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACf3Iz5Nw3Je1uH1V92X4Tda/luontokuvat/talvi/4/DS43771_4-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACo_gTmP375j9QFthCcuIMKa/luontokuvat/talvi/4/DS43771_4.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAM3lRN_MbCKGH_8SukvYm4a/luontokuvat/talvi/4/DS43771_5-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACH4fCNCubFAkQpvZJwjACra/luontokuvat/talvi/4/DS43771_5.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADvrl69Ul33t8wM6SVqEA5va/luontokuvat/talvi/4/DS43771_7-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACwlffO3Hu7c3MM2XXxpW4Ka/luontokuvat/talvi/4/DS43771_7.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACGXGRB3313h4G-ZK4EyGTZa/luontokuvat/talvi/4/DS43771_6-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB8mwZhqDuda1FYKtdyRhnKa/luontokuvat/talvi/4/DS43771_6.jpg)
+
+*Lähikuvia jäästä auringon laskiessa*
+
 
 
 
