--- a/en/photography/finnish-nature/autumn/_posts/2015-07-14-00076.md
+++ b/en/photography/finnish-nature/autumn/_posts/2015-07-14-00076.md
@@ -8,6 +8,8 @@ redirect_from:
   - /en/pictures-of-finnish-nature/autumn/00076
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/autumn-colours).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAHbjsaetoB5qFh4jDqLG-Va/luontokuvat/syksy/2/DS31763-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADQA2_1D7mAFpEDGqDOOjiaa/luontokuvat/syksy/2/DS31763.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABOrwFvCXTzs1llivSY1q7La/luontokuvat/syksy/2/DS31765-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABgOlTfvw6cjlb-xbSY62pJa/luontokuvat/syksy/2/DS31765.jpg)
