--- a/en/photography/finnish-nature/spring/_posts/2015-07-14-00049.md
+++ b/en/photography/finnish-nature/spring/_posts/2015-07-14-00049.md
@@ -8,6 +8,8 @@ redirect_from:
   - /en/pictures-of-finnish-nature/spring/00049
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/flowers).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABA91BELjDURhXk6RdA1jRla/luontokuvat/kev%C3%A4t/DS15964-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABjuL0H7d5w0rdZFFX4EMr0a/luontokuvat/kev%C3%A4t/DS15964.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAg4CtyJTo4nc6acE96Pleva/luontokuvat/kev%C3%A4t/DS15965-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADkEDCR0tAEcX24aflEgfwpa/luontokuvat/kev%C3%A4t/DS15965.jpg)
