--- a/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00110.md
+++ b/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00110.md
@@ -7,6 +7,9 @@ image:
 redirect_from:
   - /luontokuvat/kesa/00110
 ---
+
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACgI1UfoMMRFxuWvyu0sHnwa/luontokuvat/kes%C3%A4/8/DS32951-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACg4f50kVSwupawYcSESWc8a/luontokuvat/kes%C3%A4/8/DS32951.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADRiUUvFcVcqIgEcPQKIAm5a/luontokuvat/kes%C3%A4/8/DS32944-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACXVkteA-0XEpQVa9toHeJya/luontokuvat/kes%C3%A4/8/DS32944.jpg)
