--- a/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00076.md
+++ b/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00076.md
@@ -8,6 +8,8 @@ redirect_from:
   - /luontokuvat/syksy/00076
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/autumn-colours) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAHbjsaetoB5qFh4jDqLG-Va/luontokuvat/syksy/2/DS31763-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADQA2_1D7mAFpEDGqDOOjiaa/luontokuvat/syksy/2/DS31763.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABOrwFvCXTzs1llivSY1q7La/luontokuvat/syksy/2/DS31765-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABgOlTfvw6cjlb-xbSY62pJa/luontokuvat/syksy/2/DS31765.jpg)
