--- a/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00080.md
+++ b/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00080.md
@@ -8,6 +8,8 @@ redirect_from:
   - /luontokuvat/syksy/00080
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADs9mLYRgDDQLm7s9SxrmK6a/luontokuvat/syksy/2/DS31703-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABT7JJYcPd_zXVfVIO-l_yDa/luontokuvat/syksy/2/DS31703.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADQNnAThbMOj_VpsjVfStuBa/luontokuvat/syksy/2/DS31699-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADbmtXYQ62e2MUj3kcrDHlsa/luontokuvat/syksy/2/DS31699.jpg)
