--- a/en/photography/finnish-nature/autumn/_posts/2015-07-14-00072.md
+++ b/en/photography/finnish-nature/autumn/_posts/2015-07-14-00072.md
@@ -8,6 +8,8 @@ redirect_from:
   - /en/pictures-of-finnish-nature/autumn/00072
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/autumn-colours).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACrpSlUE3bD6pfSiU7Fw2jVa/luontokuvat/syksy/2/DS33597-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADScG792ulGIbnSvOA7VYa7a/luontokuvat/syksy/2/DS33597.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABewg_DPEhxzA8aRptu5lyCa/luontokuvat/syksy/2/DS29620-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADXSjYuk3EPLiiJNSGPFRiKa/luontokuvat/syksy/2/DS29620.jpg)
