--- a/en/photography/finnish-nature/autumn/_posts/2015-07-14-00075.md
+++ b/en/photography/finnish-nature/autumn/_posts/2015-07-14-00075.md
@@ -8,6 +8,8 @@ redirect_from:
   - /en/pictures-of-finnish-nature/autumn/00075
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/autumn-colours).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABS0y3cu-R5x_H370zEUxpxa/luontokuvat/syksy/2/DS31334-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAoSHw-7nNl5KHw8LhG_thra/luontokuvat/syksy/2/DS31334.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACEgqtqcVyL1OqXeip1dtNva/luontokuvat/syksy/2/DS33280-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAANN70aZ6BU5oHTN9AYFjw0a/luontokuvat/syksy/2/DS33280.jpg)
