--- a/en/photography/finnish-nature/autumn/_posts/2015-07-14-00083.md
+++ b/en/photography/finnish-nature/autumn/_posts/2015-07-14-00083.md
@@ -8,6 +8,8 @@ redirect_from:
   - /en/pictures-of-finnish-nature/autumn/00083
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/autumn-colours).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABsx7gWAdqqH9-DiDmc3wyTa/luontokuvat/syksy/3/DS37348-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA7iKZfZ7q1OzO0pc75WuK9a/luontokuvat/syksy/3/DS37348.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACem3Svf5DOnyUFBW0lUrHNa/luontokuvat/syksy/3/DS37350-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAMdVb58gWwJSeJ3O7q6qwSa/luontokuvat/syksy/3/DS37350.jpg)
