--- a/en/photography/finnish-nature/spring/_posts/2015-07-14-00029.md
+++ b/en/photography/finnish-nature/spring/_posts/2015-07-14-00029.md
@@ -8,6 +8,8 @@ redirect_from:
   - /en/pictures-of-finnish-nature/spring/00029
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/flowers).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACqaETIMbzzqjzu0FNg37npa/luontokuvat/kev%C3%A4t/DSC26051-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACe909u5bBZb6HAquOdUMNPa/luontokuvat/kev%C3%A4t/DSC26051.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB5k-54jwDoBI10x_lKNnJ_a/luontokuvat/kev%C3%A4t/DSC26058-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADyRQOilmDMxbUeuqVCN26Ca/luontokuvat/kev%C3%A4t/DSC26058.jpg)
