--- a/valokuvaus/luontokuvat/kevat/_posts/2015-07-14-00054.md
+++ b/valokuvaus/luontokuvat/kevat/_posts/2015-07-14-00054.md
@@ -8,6 +8,8 @@ redirect_from:
   - /luontokuvat/kevat/00054
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADI-I31XmhAWDrvToNUXMfKa/luontokuvat/kev%C3%A4t/DS17776-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADXIpGf99F6XT3EUe4_Tk9Ba/luontokuvat/kev%C3%A4t/DS17776.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABZqUT1ILriARDnCaM4Usjta/luontokuvat/kev%C3%A4t/DS17778-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACKOOzHu006tuFPamFPr4nWa/luontokuvat/kev%C3%A4t/DS17778.jpg)
