--- a/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00071.md
+++ b/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00071.md
@@ -6,6 +6,8 @@ image:
   thumb:
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACbCMEUBtq8doVdfog_neKfa/luontokuvat/syksy/4/DS46629-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACe3X9qgROynvaePcApzJuOa/luontokuvat/syksy/4/DS46629.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB9mLkmp8o7korXnQlWOJ46a/luontokuvat/syksy/4/DS46653-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADgOWewxiduwb1mdLM8Uks1a/luontokuvat/syksy/4/DS46653.jpg)
