--- a/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00084.md
+++ b/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00084.md
@@ -8,6 +8,8 @@ redirect_from:
   - /luontokuvat/syksy/00084
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/autumn-colours) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAFooKBQd1MgSCvMnzOekfra/luontokuvat/syksy/3/DS37318-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABYcnNsj3veOI9smWz8F1XXa/luontokuvat/syksy/3/DS37318.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAlVbI8hMK78RbMGNCjW7G1a/luontokuvat/syksy/3/DS37324-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABELNBUsmXwk_Ud-CcGGuzZa/luontokuvat/syksy/3/DS37324.jpg)
