--- a/en/photography/finnish-nature/winter/_posts/2015-07-14-00022.md
+++ b/en/photography/finnish-nature/winter/_posts/2015-07-14-00022.md
@@ -8,6 +8,8 @@ redirect_from:
   - /en/pictures-of-finnish-nature/winter/00022
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/landscapes-and-sunsets).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACB0DO3lfgRV4A6rqFrvrmBa/luontokuvat/talvi/DSC59992-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADOGlj7tgZi1fTlX7EiAUAZa/luontokuvat/talvi/DSC59992.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACEQyEF9gSgAKtxd2CbLZFwa/luontokuvat/talvi/DSC59990-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAzM6lqx3NjWxO73xOi0Hjoa/luontokuvat/talvi/DSC59990.jpg)
