--- a/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00032.md
+++ b/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00032.md
@@ -8,6 +8,8 @@ redirect_from:
   - /luontokuvat/kesa/00032
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/bees-and-flowers) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADXNjlq1yRAzWiVllRtaNiPa/luontokuvat/kes%C3%A4/5/DS24185-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADnbfwS_J757fHoY5WkdCb_a/luontokuvat/kes%C3%A4/5/DS24185.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD4ISD2ZOFUi5UeFuyzZYU5a/luontokuvat/kes%C3%A4/6/DS25836-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAAvP7P1BImEwCplSZWPToja/luontokuvat/kes%C3%A4/6/DS25836.jpg)
