--- a/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00067.md
+++ b/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00067.md
@@ -8,6 +8,8 @@ redirect_from:
   - /luontokuvat/syksy/00067
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/landscapes-and-sunsets) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADWIwe6Ed1fPiWuzt5WD_C4a/luontokuvat/syksy/DSC52085-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACxAiXeCfxYeB7QY3hX0BePa/luontokuvat/syksy/DSC52085.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAl3ppt0dACexdT8i2Vy9pea/luontokuvat/syksy/DSC52046-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACYjhXyEo0fxoAIglDq-k4ga/luontokuvat/syksy/DSC52046.jpg)
