--- a/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00090.md
+++ b/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00090.md
@@ -8,6 +8,8 @@ redirect_from:
   - /luontokuvat/syksy/00090
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/landscapes-and-sunsets) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABuIv05eMVCbWhpLhFW4HoKa/luontokuvat/syksy/3/DS42283-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACmQbkMXlegWGMRdioIplPDa/luontokuvat/syksy/3/DS42283.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABnbfbSqOgBrRmSsslXHMnUa/luontokuvat/syksy/3/DS42294-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACmSZ2MpRXhKonjiqb9SbAYa/luontokuvat/syksy/3/DS42294.jpg)
