--- a/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00091.md
+++ b/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00091.md
@@ -8,6 +8,8 @@ redirect_from:
   - /luontokuvat/syksy/00091
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/landscapes-and-sunsets) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAouXgwg8pkwWPrRgb39v5aa/luontokuvat/syksy/3/DS42187-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADnplcPSELJml0oebQpfMbea/luontokuvat/syksy/3/DS42187.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACImd8kEv7k3_ZV0ZJgJJTZa/luontokuvat/syksy/3/DS42189-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABXIQcO-cVYnyV--6PXqIZFa/luontokuvat/syksy/3/DS42189.jpg)
