--- a/en/photography/finnish-nature/autumn/_posts/2015-07-14-00067.md
+++ b/en/photography/finnish-nature/autumn/_posts/2015-07-14-00067.md
@@ -8,6 +8,7 @@ redirect_from:
   - /en/pictures-of-finnish-nature/autumn/00067
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/landscapes-and-sunsets).*
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADWIwe6Ed1fPiWuzt5WD_C4a/luontokuvat/syksy/DSC52085-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACxAiXeCfxYeB7QY3hX0BePa/luontokuvat/syksy/DSC52085.jpg)
 
