--- a/en/photography/finnish-nature/summer/_posts/2015-07-14-00032.md
+++ b/en/photography/finnish-nature/summer/_posts/2015-07-14-00032.md
@@ -8,6 +8,8 @@ redirect_from:
   - /en/pictures-of-finnish-nature/summer/00032
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/bees-and-flowers).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADXNjlq1yRAzWiVllRtaNiPa/luontokuvat/kes%C3%A4/5/DS24185-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADnbfwS_J757fHoY5WkdCb_a/luontokuvat/kes%C3%A4/5/DS24185.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD4ISD2ZOFUi5UeFuyzZYU5a/luontokuvat/kes%C3%A4/6/DS25836-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAAvP7P1BImEwCplSZWPToja/luontokuvat/kes%C3%A4/6/DS25836.jpg)
