--- a/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00070.md
+++ b/valokuvaus/luontokuvat/syksy/_posts/2015-07-14-00070.md
@@ -8,6 +8,8 @@ redirect_from:
   - /luontokuvat/syksy/00070
 ---
 
+*Voit ostaa täyden resoluution kuvat ilman vesileimaa [500px.com](https://500px.com/minimuutticom/galleries/landscapes-and-sunsets) sivustolta.*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAahN1m7zp4CK6QJjgv92-fa/luontokuvat/syksy/DSC53413-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD4TIJhLiRGEJYkuV-AwZXMa/luontokuvat/syksy/DSC53413.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAEGmpD5R0ZbSAgwHNGZSXta/luontokuvat/syksy/DSC53347-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABT5PybUhV7cVu5OgTtxZOda/luontokuvat/syksy/DSC53347.jpg)
