--- a/en/photography/finnish-nature/autumn/_posts/2015-07-14-00065.md
+++ b/en/photography/finnish-nature/autumn/_posts/2015-07-14-00065.md
@@ -6,4 +6,6 @@ image:
   thumb:
 ---
 
+*You can buy this photo in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/autumn-colours).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD2UZPNZV092lNB_gHTgAq4a/luontokuvat/syksy/2/DS34536-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD1c-D8J39klB15od_PhaRMa/luontokuvat/syksy/2/DS34536.jpg)
