--- a/en/photography/finnish-nature/summer/_posts/2015-07-14-00077.md
+++ b/en/photography/finnish-nature/summer/_posts/2015-07-14-00077.md
@@ -8,6 +8,8 @@ redirect_from:
   - /luontokuvat/kesa/00077
 ---
 
+*You can buy these photos in full resolution and without the watermark on [500px.com](https://500px.com/minimuutticom/galleries/starworts).*
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA0zD8Es_hx0ejek3kpI7o5a/luontokuvat/kes%C3%A4/9/DS22931-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD8LfRRbAHIofWiw_5MCC4Wa/luontokuvat/kes%C3%A4/9/DS22931.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACxgzHLKR2HZxnM91oWt-fFa/luontokuvat/kes%C3%A4/9/DS22929-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACflGNvdyXRSqAhl3Jrj8Lra/luontokuvat/kes%C3%A4/9/DS22929.jpg)
