--- a/aktivointi/_posts/2015-07-11-kannet.md
+++ b/aktivointi/_posts/2015-07-11-kannet.md
@@ -7,6 +7,8 @@ image:
   thumb:
 ---
 
+Kansilla saa kivaa vaihtelua etsintätehtäviin ja tehtävän vaikeutta voi säädellä käyttämällä erilaisia kansia.
+
 Tässä tehtävässä voi käyttää mitä tahansa kansia, kuten raejuustopurkin kantta, koirannamiämpärin kantta, pilttipurkin kantta, kattilan kantta tai vaikka alassuin käännettyä lautasta (joka on koiralle todella vaikea). Matolla kannet on yleensä helpompi nostaa tai kääntää ympäri kun taas kovalla lattialla tehtävät ovat vaikeampia.
 
 Kun Miki oli pienempi, eikä sen kanssa oltu vielä tehty paljon mitään tällaisia tehtäviä, annoin Mikille tehtäväksi etsiä herkun kattilan kannen alta. Tehtävä oli silloin Mikille aivan liian vaikea, eikä se ole sen koommin enää edes yrittänyt, jos olen laittanut herkun kattilan kannen alle.
