--- a/aktivointi/_posts/2015-07-11-lasagne.md
+++ b/aktivointi/_posts/2015-07-11-lasagne.md
@@ -7,6 +7,8 @@ image:
   thumb:
 ---
 
+Papereista kasattu lasagne on mukavan haastava tehtävä koiralle.
+
 Tarvitset isohkon pahvilaatikon, aikakauslehden (josta niitit on poistettu) sekä kuivia nameja, esim. nappuloita sekä jotain kuivia herkkuja. Pahvilaatikkoon laitetaan kerroksittain aikakauslehden sivuja ja nameja sinne väleihin. Laitan yleensä herkkupalat alempiin kerroksiin ja nappulat päällimmäisiin kerroksiin.
 
 Mikiltä menee noin 10-15 minuuttia kaikkien namien löytämiseen.
