--- a/aktivointi/_posts/2015-07-11-tunnelit.md
+++ b/aktivointi/_posts/2015-07-11-tunnelit.md
@@ -7,9 +7,9 @@ image:
   thumb:
 ---
 
-Agilitystä on varmaan monelle tuttu asia putki ja vielä sellainen minkä loppuosana on kankainen sukka.
+Agilitystä tutun putken voi helposti rakentaa myös kotona.
 
-Me ollaan tehty apupöydästä ja pyyhkeestä tunneli, mistä Mikin pitää mennä läpi. (Itse pöytä on niin hutera, että toisen täytyy aina pitää pöydästä kiinni.) Tuota sukkaosuutta pidennetään vähän jokaisella harjoituskerralla.
+Me ollaan tehty apupöydästä ja pyyhkeestä tunneli, mistä Mikin pitää mennä läpi. (Itse pöytä on niin hutera, että toinen yleensä pitää pöydästä kiinni.) Tuota sukkaosuutta pidennetään vähän jokaisella harjoituskerralla.
 
 Alla olevissa kuvissa on pelkkä pöytä ilman pyyhettä, jotta Miki näkyy kuvissa.
 
