--- a/en/photography/finnish-nature/spring/_posts/2015-07-14-00032.md
+++ b/en/photography/finnish-nature/spring/_posts/2015-07-14-00032.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA4a6-y-EcLzIq4W3ORHHwba/luontokuvat/kev%C3%A4t/DS14178-245px.jpg
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC-sCdREbggfvIGLt7BMkona/luontokuvat/kev%C3%A4t/3/DS49769-245px.jpg
   thumb:
 redirect_from:
-  - /en/pictures-of-finnish-nature/spring/00032
+  - /luontokuvat/kevat/00032
 ---
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABJLQNc-u1k0x6amlcwh1Qra/luontokuvat/kev%C3%A4t/DS14175-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAALDuSEnS5D44T_B5HRc64oa/luontokuvat/kev%C3%A4t/DS14175.jpg)
@@ -14,4 +14,12 @@ redirect_from:
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACquaf0LL9sX8tct75M_J6qa/luontokuvat/kev%C3%A4t/DS14181-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABWqAX9CncRIMva0MTdYjTna/luontokuvat/kev%C3%A4t/DS14181.jpg)
 
-*Common hepaticas*
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABddpjV6FXQ6y33kyr0wh9Pa/luontokuvat/kev%C3%A4t/3/DS49780-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABGxf91KgmwMzbJ5gDtBUtza/luontokuvat/kev%C3%A4t/3/DS49780.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB_U6l2vJhfJ6i0pjxVQUmfa/luontokuvat/kev%C3%A4t/3/DS49775-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADZ9GiFS3ci_BPZVyMt8qJ3a/luontokuvat/kev%C3%A4t/3/DS49775.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABaH4OYaKxsxvHsj9-SX48Qa/luontokuvat/kev%C3%A4t/3/DS49778-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAvDKG0P8KXRDKUxi4ifDBZa/luontokuvat/kev%C3%A4t/3/DS49778.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABh6koFEEjL45k9L8dfl1rta/luontokuvat/kev%C3%A4t/3/DS49769-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABGHHputlzpW4QiTpZ48qG1a/luontokuvat/kev%C3%A4t/3/DS49769.jpg)
+
+*Sinivuokko*
