--- a/en/photography/finnish-nature/summer/_posts/2015-07-14-00068.md
+++ b/en/photography/finnish-nature/summer/_posts/2015-07-14-00068.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAoLVyGEnzOBCdG8OQ0D_bka/luontokuvat/kes%C3%A4/3/DS18927-245px.jpg
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAFKaAzkGfolxkTm6_m8vpGa/luontokuvat/kes%C3%A4/10/DS56288-245px.jpg
   thumb:
 redirect_from:
-  - /en/pictures-of-finnish-nature/summer/00068
+  - /luontokuvat/kesa/00068
 ---
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC5DxNu3t-rJxSuqZARpiXma/luontokuvat/kes%C3%A4/3/DS18893-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAt0EgfP-hxIygWC_qYPi49a/luontokuvat/kes%C3%A4/3/DS18893.jpg)
@@ -18,4 +18,8 @@ redirect_from:
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAwBZRqn1V9uKUQ8ifnU0CRa/luontokuvat/kes%C3%A4/3/DS18937-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABIEdmcNqeWjDY36xGDH3Qha/luontokuvat/kes%C3%A4/3/DS18937.jpg)
 
-*Lilac*
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADX1V0eVuhKhnggJeGrQ5AUa/luontokuvat/kes%C3%A4/10/DS56281-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAOc3mXdIVUkS6_yXNWdrmCa/luontokuvat/kes%C3%A4/10/DS56281.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAzYmTQ5phJM7sj1cZXwKsHa/luontokuvat/kes%C3%A4/10/DS56284-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC7vxeTJVeQ0BN2QyEc6NlDa/luontokuvat/kes%C3%A4/10/DS56284.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB3Rop9xVu9EbCJAQZGd9bCa/luontokuvat/kes%C3%A4/10/DS56288-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADzCWJPNrIpsM9h0Mt7Mqtla/luontokuvat/kes%C3%A4/10/DS56288.jpg)
