--- a/aktivointi/_posts/2015-07-11-jakkara.md
+++ b/aktivointi/_posts/2015-07-11-jakkara.md
@@ -17,7 +17,7 @@ Mikiltä kesti jokaisessa tehtävässä reilun minuutin löytää kaikki namit, 
 
 ###### Tehtävä 1: Korallit
 
-Ohjeen korallien tekemiseen löydät [täältä](http://minimuutti.com/aktivointi/korallit/).
+Ohjeen korallien tekemiseen löydät [täältä](/aktivointi/korallit/).
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADhLYak8fFx2n1cAU-jWe_Sa/aktivointi/jakkara/DS00935-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAsjqewDgq07rL9qLkikS92a/aktivointi/jakkara/DS00935.jpg)
 
