--- a/aktivointi/_posts/2015-07-11-koroke.md
+++ b/aktivointi/_posts/2015-07-11-koroke.md
@@ -11,7 +11,7 @@ Korokkeena voi käyttää mitä tahansa laatikkoa, lipastoa, pöytää, tuolia t
 
 Idea tässä on se, että kun koroke on tarpeeksi korkea, koira ei enää suoraan yltä syömään nappuloita tai herkkuja vaan joutuu miettimään millä ylettäisi syömään ne. Koira tulee samalla tehneeksi vähän tasapainoharjoitteluakin - ainakin Miki nousi takatassuilleen tuon korkeimman korokkeen kanssa (harmi etten saanut siitä valokuvaa).
 
-Aloitin ensin matalalla pahvilaatikolla, jotta tehtävä ei olisi ollut liian vaikea ja vähitellen kasvatin korokkeen korkeutta vaihtelemalla laatikoita. Korokkeen päälle voi laittaa nappulat tai herkut suoraan. Tai sitten korokkeen päälle voi laittaa myös joitain tehtäviä, kuten [jääpalamuotteja](http://minimuutti.com/aktivointi/jaapalamuotit/) tai [ritilän](http://minimuutti.com/aktivointi/ritila/). Mikäli koroke on hutera, niin se kannattaa laittaa seinää vasten tai siitä voi pitää kiinni koiran suorittaessa tehtäviä.
+Aloitin ensin matalalla pahvilaatikolla, jotta tehtävä ei olisi ollut liian vaikea ja vähitellen kasvatin korokkeen korkeutta vaihtelemalla laatikoita. Korokkeen päälle voi laittaa nappulat tai herkut suoraan. Tai sitten korokkeen päälle voi laittaa myös joitain tehtäviä, kuten [jääpalamuotteja](/aktivointi/jaapalamuotit/) tai [ritilän](/aktivointi/ritila/). Mikäli koroke on hutera, niin se kannattaa laittaa seinää vasten tai siitä voi pitää kiinni koiran suorittaessa tehtäviä.
 
 ---
 
