--- a/aktivointi/_posts/2015-07-11-onginta.md
+++ b/aktivointi/_posts/2015-07-11-onginta.md
@@ -13,7 +13,7 @@ Valitsin tähän tehtävään suuren proteiinijauhopurkin sen koon ja muodon vuo
 
 Aloitin pesemällä ja kuivaamalla purkin huolellisesti. Sitten kiinnitin kertakäyttömukin kahvoihin noin 50 cm pitkän köyden ja köyden toiseen päähän solmin puisen palikan. Solmujen jälkeen köyden pituudeksi jäi noin 35 cm.
 
-Aloitimme helpolla tehtävällä, joka muistutti [Muki tuubissa](http://minimuutti.com/aktivointi/muki-tuubissa/) tehtävää. Ensin käänsin purkin kyljelleen lattialle, laitoin kuppiin muutaman ankkafileestä leikatun palasen ja sitten työnsin kupin purkin sisälle. Tehtävässä kannattaa käyttää jotain tahmeita nameja, jotta ne pysyvät mukin sisällä eivätkä putoa tuon purkin sisälle kesken tehtävän.
+Aloitimme helpolla tehtävällä, joka muistutti [Muki tuubissa](/aktivointi/muki-tuubissa/) tehtävää. Ensin käänsin purkin kyljelleen lattialle, laitoin kuppiin muutaman ankkafileestä leikatun palasen ja sitten työnsin kupin purkin sisälle. Tehtävässä kannattaa käyttää jotain tahmeita nameja, jotta ne pysyvät mukin sisällä eivätkä putoa tuon purkin sisälle kesken tehtävän.
 
 Miki tiesi heti että palikasta tulee vetää saadakseen mukin ulos. Toistin vielä kertaalleen tämän helpon tehtävän, jotta Mikillä kunnolla muistui mieleen, että palikasta tulee vetää taaksepäin saadakseen kupin herkkuineen ulos.
 
