--- a/aktivointi/_posts/2015-07-11-pussukat.md
+++ b/aktivointi/_posts/2015-07-11-pussukat.md
@@ -13,7 +13,7 @@ Pussukat saattavat tuntua toisista koirista pelottavilta, kun pää pitää työ
 
 Toisella kerralla tein muuten saman, mutta jätin pussukan hieman korkeammaksi. Ja kolmannella kerralla taas vähän korkeammaksi. Vasta neljännellä kerralla annoin pussukan Mikille niin, ettei reunoja oltu rullattu ollenkaan.
 
-Pussukoilla voi tehdä useita erilaisia etsimistehtäviä. Alla kuvattuja tehtäviä voi vaikeuttaa laittamalla pussukoiden sisään jotain pehmeitä tai pyöreitä esteitä, kuten vaikka virkattuja [koralleja](http://minimuutti.com/aktivointi/korallit/) tai tennispalloja.
+Pussukoilla voi tehdä useita erilaisia etsimistehtäviä. Alla kuvattuja tehtäviä voi vaikeuttaa laittamalla pussukoiden sisään jotain pehmeitä tai pyöreitä esteitä, kuten vaikka virkattuja [koralleja](/aktivointi/korallit/) tai tennispalloja.
 
 Kaikki tehtävät olivat Mikille helppoja, eikä siltä kestänyt kuin muutamista sekunneista alle minuuttiin jokaisessa tehtävässä. Kuitenkin nämä tehtävät toivat kivaa vaihtelua etsimisleikkeihin.
 
