--- a/en/activation/_posts/2015-07-20-pill-jars.md
+++ b/en/activation/_posts/2015-07-20-pill-jars.md
@@ -13,7 +13,7 @@ You can use any dry treats, I’ve used some kibbles.
 
 These games are so easy for Miki, that he gets the kibbles out from a single jar in just seconds. That’s why I always give several jars at the same time.
 
-If you have large-mouthed jars, you can put corals or pieces of cloth as obstacles to make the game harder.
+If you have large-mouthed jars, you can put [corals](https://minimuutti.com/en/activation/corals/) or pieces of cloth as obstacles to make the game harder.
 
 ---
 
