--- a/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00051.md
+++ b/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00051.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/_zGLb6dvi7s9nOl6kE-RsvIqoBsWaD0mnWD7kInGANQ=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB_jz62B-Dnrt1CzPyKIV6Aa/luontokuvat/kes%C3%A4/2/DSC34601-245px.jpg
   thumb:
 redirect_from:
   - /luontokuvat/kesa/00051
 ---
 
-[![](https://lh3.googleusercontent.com/iRYyqTqMalvL7IrvHKBB0NBF3QvUTlTUrVy2P3PnLzI=w800)](https://lh3.googleusercontent.com/iRYyqTqMalvL7IrvHKBB0NBF3QvUTlTUrVy2P3PnLzI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB2oiSki88iF8OeVSdirk_za/luontokuvat/kes%C3%A4/2/DSC34601-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADwOFqq4VSsVTGQO7Y6T2Nxa/luontokuvat/kes%C3%A4/2/DSC34601.jpg)
 
-[![](https://lh3.googleusercontent.com/Dw3FdZQTMSHzfgZI7jnQwDn-PJbBZDzGYuOB-kpajmU=w800)](https://lh3.googleusercontent.com/Dw3FdZQTMSHzfgZI7jnQwDn-PJbBZDzGYuOB-kpajmU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACYKqONavQ5G77-qhDV5yija/luontokuvat/kes%C3%A4/2/DSC34602-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAbGlfi-2xFWA6hGvpbx6z9a/luontokuvat/kes%C3%A4/2/DSC34602.jpg)
