--- a/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00057.md
+++ b/valokuvaus/luontokuvat/kesa/_posts/2015-07-14-00057.md
@@ -2,7 +2,7 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/nLEV3vcy6ItNuio4rimZYkI9amfNscnP_PZ1sJvUfvU=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABhEMqSdufvu-cOmTprCUuya/luontokuvat/kes%C3%A4/2/DSC40494-245px.jpg
   thumb:
 redirect_from:
   - /luontokuvat/kesa/00057
@@ -10,12 +10,12 @@ redirect_from:
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAUIeUcI7ljJW_MUSNw0onJa/luontokuvat/kes%C3%A4/2/DSC40531-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAiZBQJhN0M0JLv56ptbhxja/luontokuvat/kes%C3%A4/2/DSC40531.jpg)
 
-[![](https://lh3.googleusercontent.com/hEM7w9Yemzg1a_do4DboWumAzRH_-jdpxvC5tVTWGGU=w800)](https://lh3.googleusercontent.com/hEM7w9Yemzg1a_do4DboWumAzRH_-jdpxvC5tVTWGGU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB989TNJlZm_zn9os_1VGf3a/luontokuvat/kes%C3%A4/2/DSC40498-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAIX4EZLl_2OFWSS5GNUwKaa/luontokuvat/kes%C3%A4/2/DSC40498.jpg)
 
-[![](https://lh3.googleusercontent.com/AYTxBnJ-F0X-TLiGcQI3jb4cT3HWjtCBKKPHjyQjyTY=w800)](https://lh3.googleusercontent.com/AYTxBnJ-F0X-TLiGcQI3jb4cT3HWjtCBKKPHjyQjyTY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAATqJMkxF22xcwiwHxonb59a/luontokuvat/kes%C3%A4/2/DSC40494-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB9TqrvEaBSSb_h7d9pZHm8a/luontokuvat/kes%C3%A4/2/DSC40494.jpg)
 
-[![](https://lh3.googleusercontent.com/yzpIa1nmDwM6f_-shJe360bDEwMMhdecFMBQ6D-tkzE=w800)](https://lh3.googleusercontent.com/yzpIa1nmDwM6f_-shJe360bDEwMMhdecFMBQ6D-tkzE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADi97Q1u-FTsK_Uamj1I74da/luontokuvat/kes%C3%A4/2/DSC40460-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB3e4Da1mPXlnH6fh6Mrx2La/luontokuvat/kes%C3%A4/2/DSC40460.jpg)
 
-[![](https://lh3.googleusercontent.com/zhHVBsXrMt-KaA6YyomkwkrN06Ax92kRqYrpQh4JHHw=w800)](https://lh3.googleusercontent.com/zhHVBsXrMt-KaA6YyomkwkrN06Ax92kRqYrpQh4JHHw=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADPJ7MFs2Mr-xFhF5FZtMsla/luontokuvat/kes%C3%A4/2/DSC40489-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC1VhF2f-aqJ3uXwvlZNO6Fa/luontokuvat/kes%C3%A4/2/DSC40489.jpg)
 
 *Palmuilta näyttävät lupiinit*
